k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: m1dnightsp/backend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5

        # zoptymalizowane zasoby
        resources:
          requests:
            cpu:    "100m"
            memory: "128Mi"
          limits:
            cpu:    "250m"
            memory: "256Mi"
