k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
