k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:                       
      paths:
      - path: /realms
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
